@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
@@ -34,7 +34,6 @@ import ee.ria.xroad.proxy.testsuite.SslMessageTestCase;
 import ee.ria.xroad.proxy.testsuite.TestSuiteServerConf;
 
 import java.security.cert.X509Certificate;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -64,7 +63,7 @@ public class SslClientAuthNoISCert extends SslMessageTestCase {
 
             @Override
             public List<X509Certificate> getIsCerts(ClientId client) {
-                return Collections.emptyList();
+                return List.of();
             }
         });
 
